ajuste no cadastro do paciente e swagger do auth
